# RiseOdom

./: CMakeLists.txt  FindRiseOdom.cmake  README.md  riseodom.pc.in  riseodomsettings.h.in
include/: spkf.h  transformation_matrix.h
src/: image_database.cpp  ispkf_motionmodels.cpp  spkf.cpp  stereoodom_base.cpp  stereopreprocess.cpp  stereovodom.cpp  transformation_matrix.cpp  utils.cpp  utils_optim.cpp
test/: processodomdb.cpp
